--- a/PositiveVibes/Info.plist
+++ b/PositiveVibes/Info.plist
@@ -41,25 +41,27 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>fb620462071454627</string>
-            </array>
-        </dict>
-    </array>
-    <key>FacebookAppID</key>
-    <string>620462071454627</string>
-    <key>FacebookDisplayName</key>
-    <string>Positive Vibes</string>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>fbapi</string>
-        <string>fb-messenger-api</string>
-        <string>fbauth2</string>
-        <string>fbshareextension</string>
-    </array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb620462071454627</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>620462071454627</string>
+	<key>FacebookDisplayName</key>
+	<string>Positive Vibes</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access to photos is required for posting</string>
 </dict>
 </plist>
